gateapi/gateapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateapi
spec:
  tls:
  - hosts:
    - gateapi.burntsheep.com
    secretName: nginx-certs
  rules:
  - host: gateapi.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gateapi
          servicePort: 80
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
